@@ -1,0 +1,13 @@
+// Athena charcommand Configuration file.
+// Translated by Peter Kieser <pfak@telus.net>
+
+// Set here the symbol that you want to use for your commands
+// Only 1 character is get (default is '#'). You can set any character,
+// except control-character (0x00-0x1f), '%' (party chat speaking) and '/' (standard ragnarok GM commands)
+// With default character, all commands begin by a '#': <example> #revive
+command_symbol: #
+
+job: 60
+jobchange: 60
+petrename: 50
+petfriendly: 50
